@@ -79,6 +79,12 @@ ignored</p>
     <td valign="top">encoding to use, default is ""; the local system encoding. <em>since Ant 1.7</em></td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">force</td>
+    <td valign="top">Overwrite read-only destination
+      files.  <em>since Ant 1.8.2</em></td>
+    <td valign="top" align="center">No; defaults to false.</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
